--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #2a2a72;
+  background-color: #090a0e;
   color: #fff;
   font-family: "Poppins", sans-serif;
   display: flex;
@@ -26,7 +26,7 @@ body {
 .user-form input {
   width: 100%;
   display: block;
-  background-color: #4c2885;
+  background-color: #1c1e26;
   border: none;
   border-radius: 10px;
   color: #fff;
@@ -48,7 +48,7 @@ body {
 
 .card {
   max-width: 800px;
-  background-color: #4c2885;
+  background-color: #1c1e26;
   border-radius: 20px;
   box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
     0 15px 40px rgba(0, 0, 0, 0.1);
@@ -80,7 +80,7 @@ body {
 .avatar {
   position: relative;
   border-radius: 50%;
-  border: 10px solid #2a2a72;
+  border: 10px solid #090a0e;
   height: 150px;
   width: 150px;
 }
@@ -132,7 +132,7 @@ body {
 .repo {
   text-decoration: none;
   color: #fff;
-  background-color: #212a72;
+  background-color: #090a0e;
   font-size: 0.7rem;
   padding: 0.25rem 0.5rem;
   margin-right: 0.5rem;
